Sesión 1- 11, 15, 17 y 18 de Mayo 21h
-Cambiar de Target SDK Version, a la 29.
-Cambiar de Compile Sdk Version, a la 29.
-Cambiar de Build Tools Version, a la 29.0.3.
-Crear de la clase Camara y su xml correspondiente.
-Editar la clase EditarInfoEmpresasFragment y volver a hacer su xml correspondiente.(El error seguramente fue causa del cambio de proyecto, TUTORIAL FIREBASE, al actual. Al no saber de donde podía proceder el error, he tenido que volver a hacer desde cero solamente su xml, ya que este al copiar y pegar, aunque fuese poco a poco, saltaba error)
-Agregar permisos al AndroidManifest.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,11 +57,16 @@
     <string name="slideshow_empresas">SLIDESHOW EMPRESAS</string>
     <string name="ajustes">Ajustes</string>
     <string name="editar_mi_informaci_n">EDITAR MI INFORMACIÓN</string>
+
     <string name="txt_titulo_editInfoE">EDITAR INFORMACIÓN</string>
-    <string name="btn_editar_editInfoE">Editar información</string>
     <string name="edt_nombre_editInfoE">Nombre</string>
-    <string name="edt_localizacion_editInfoE">Localización</string>
+    <string name="edt_direccion_editInfoE">Dirección</string>
     <string name="edt_CIF_editInfoE">CIF</string>
+    <string name="edt_sector_editInfoE">Sector</string>
+    <string name="edt_resumen_editInfoE">Resumen</string>
+    <string name="edt_codEmpr_editInfoE">Codigo empresa</string>
+    <string name="btn_editar_editInfoE">Editar información</string>
+
     <string name="descripcion_img_producto_publicado">descripcion_img_producto_publicado</string>
     <string name="categoria">categoria</string>
     <string name="marca">marca</string>
