Falta hacer que el boton de buscar funcione y cambiar metodo de buscar que sea por un array de palabras en vez de solo por marca

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,4 +97,5 @@
     <string name="sector">Sector</string>
     <string name="imagencarrito">imagenCarrito</string>
     <string name="buscar">Buscar...</string>
+    <string name="imagenbuscar">imagenbuscar</string>
 </resources>
