--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,4 +102,5 @@
     <string name="sector">Sector</string>
     <string name="imagencarrito">imagenCarrito</string>
     <string name="buscar">Buscar...</string>
+    <string name="nav_camara">CÁMARA</string>
 </resources>
