--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -122,4 +122,13 @@
     <string name="edt_localizacion_editInfoE">Localización</string>
     <string name="disminuir_cantidad">Disminuir cantidad</string>
     <string name="aumentar_cantidad">Aumentar cantidad</string>
+    <string name="completar_perfil">COMPLETAR PERFIL</string>
+    <string name="completar_informaci_n_de_usuario">COMPLETAR INFORMACIÓN DE USUARIO</string>
+    <string name="apellidos">Apellidos:</string>
+    <string name="calle">Calle:</string>
+    <string name="n_mero">Número:</string>
+    <string name="localidad">Localidad:</string>
+    <string name="c_digo_postal">Código postal:</string>
+    <string name="provincia">Provincia:</string>
+    <string name="completar_informaci_n">COMPLETAR INFORMACIÓN</string>
 </resources>
