--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,6 +118,8 @@
     <string name="marca_producto_carrito">Marca producto carrito</string>
     <string name="cantidad_producto_carrito">Cantidad producto carrito</string>
     <string name="precio_producto_carrito">Precio producto carrito</string>
+    <string name="btn_guardar_fdipp">GUARDAR</string>
+    <string name="btnGuardar_fdgipp">GUARDAR</string>
 
 
 </resources>
