Añado versión landscape a la mayoría de activities y fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,4 +137,5 @@
     <string name="provincia">Provincia:</string>
     <string name="completar_informaci_n">COMPLETAR INFORMACIÓN</string>
     <string name="cancelar_reserva">Cancelar reserva</string>
+    <string name="autoFillHints">autofillHints</string>
 </resources>
